--- a/vgr/VGR_files/vgr.css
+++ b/vgr/VGR_files/vgr.css
@@ -1,26 +1,11 @@
- #gamerec { font-family: 'Black Ops One';
-            position: absolute;
-	left: 25%;
-	top: 7%;
-	width: 50%;
-	text-align: center; 
-	color: orange; 
-	font-size: 150px;
-
-  }
-
-
- .boxed{
- 	border: 4px solid white;
- }
-
  .backgroundColor { 
  	background-color: lightblue 
  }
 
- body {
- 	background-image: url("https://cdn-images-1.medium.com/max/1190/1*bD9nGMBuGWBdawdmrMmzVA.png")
-}
+ .backgroundImage {
+ 	background-image: url("https://cdn-images-1.medium.com/max/1190/1*bD9nGMBuGWBdawdmrMmzVA.png");
+ }
+
 #search { 
 	position: absolute;
 	left: 25%;
@@ -28,13 +13,12 @@
 	width: 50%;
 	text-align: center; 
 	font-size: 15px;
-	border: 8px solid #009999;
  }
 
  #submit { 
 	position: absolute;
-	left: 77%;
-	top: 51%;
+	left: 76%;
+	top: 50%;
 	width: 10px%;
 	text-align: center; 
 	font-size: 18px;
