--- a/vgr/templates/vgr.html
+++ b/vgr/templates/vgr.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html>
+
 <head>
 	<title>VGR</title>
 	<link rel="stylesheet" type="text/css" href="vgr.css">
 </head>
 <body>
-	<form method="get">
-	Please enter a search term: <input type="text" name= "query" >
-	<input type="submit" name="submit"></input>
-	</form>
+<div class="backgroundImage">
+		<form method="get">
+			<p id='gamerec'> GameRec </p>
+			<div class="boxed">
+				<input id= "search" type="text" name= "query" >
+				<input id= "submit" type="submit" name="submit"></input>
+			<ul>
+  				<li><a href="default.asp">Home</a></li>
+  				<li><a href="news.asp">News</a></li>
+  				<li><a href="contact.asp">Contact</a></li>
+ 				<li><a href="about.asp">About</a></li>
+			</ul>
+			</div>
+			</div>
+		</form>
+</div>
 </body>
 </html>
