--- a/vgr/templates/vgr.html
+++ b/vgr/templates/vgr.html
@@ -8,7 +8,7 @@
 <body>
 <div class="backgroundImage">
 		<form method="get">
-			<p id='gamerec'> GameRec </p>
+			<img id = "gamerec" src="../GameRec.png" alt="gameRec" height="130" width="150">
 			<div class="boxed">
 				<input id= "search" type="text" name= "query" >
 				<input id= "submit" type="submit" name="submit"></input>
