--- a/vgr/templates/vgr.html
+++ b/vgr/templates/vgr.html
@@ -1,26 +1,39 @@
 <!doctype html>
+
 <html>
 
 <head>
-	<title>VGR</title>
+	<!-- Sets title for html page -->
+	<title>GameRec</title>
+	<!-- Linkes css and javascript -->
 	<link rel="stylesheet" type="text/css" href="vgr.css">
+	<script type="text/javascript" src="vgr.js"></script>
 </head>
+
 <body>
-<div class="backgroundImage">
+	<!-- Sets the gaming background for the entire html page-->
+	<div class="backgroundImage">
+		<!-- Allows user input to search -->
 		<form method="get">
+			<!-- Creates the GameRec title image -->
 			<img id = "gamerec" src="../GameRec.png" alt="gameRec" height="130" width="150">
-			<div class="boxed">
+			<!-- Creates border around search box -->
+				<div class="boxed">
+				<!-- Creates search box and submit button -->
 				<input id= "search" type="text" name= "query" >
 				<input id= "submit" type="submit" name="submit"></input>
+				</div>
+			<!-- Navigation bar elements -->
 			<ul>
   				<li><a href="default.asp">Home</a></li>
   				<li><a href="news.asp">News</a></li>
   				<li><a href="contact.asp">Contact</a></li>
  				<li><a href="about.asp">About</a></li>
 			</ul>
-			</div>
-			</div>
+			<!-- Wikipedia API generate info -->
+			<div id="information"> </div>
 		</form>
-</div>
+	</div>
 </body>
+
 </html>
