linked home button

--- a/vgr/templates/vgr.html
+++ b/vgr/templates/vgr.html
@@ -25,10 +25,10 @@
 				</div>
 			<!-- Navigation bar elements -->
 			<ul>
-  				<li><a href="default.asp">Home</a></li>
-  				<li><a href="news.asp">News</a></li>
-  				<li><a href="contact.asp">Contact</a></li>
- 				<li><a href="about.asp">About</a></li>
+  				<li><a href="vgr.html">Home</a></li>
+  				<li><a href="news.html">News</a></li>
+  				<li><a href="contact.html">Contact</a></li>
+ 				<li><a href="about.html">About</a></li>
 			</ul>
 			<!-- Wikipedia API generate info -->
 			<div id="information"> </div>
