Changed json, changed javascript script tag, added jinja2 + version: latest

--- a/vgr/templates/vgr.html
+++ b/vgr/templates/vgr.html
@@ -7,7 +7,7 @@
 	<title>GameRec</title>
 	<!-- Linkes css and javascript -->
 	<link rel="stylesheet" type="text/css" href="vgr.css">
-	<script type="text/javascript" src="vgr.js"></script>
+	<script src="vgr.js"></script>
 </head>
 
 <body>
@@ -31,7 +31,8 @@
  				<li><a href="about.html">About</a></li>
 			</ul>
 			<!-- Wikipedia API generate info -->
-			<div id="information"> </div>
+			<div id="information"> 
+			</div>
 		</form>
 	</div>
 </body>
