--- a/vgr/templates/page3.html
+++ b/vgr/templates/page3.html
@@ -15,20 +15,12 @@
 	<div class="backgroundImage">
 		<!-- Allows user input to search -->
 		<form method="get">
-			<!-- Creates the GameRec title image -->
-			<img id = "gamerec" src="../GameRec.png" alt="gameRec" height="130" width="150">
-			<!-- Creates border around search box -->
-				<div class="boxed">
-				<!-- Creates search box and submit button -->
-				<input id= "search" type="text" name= "query" >
-				<input id= "submit" type="submit" name="submit"></input>
-				</div>
 			<!-- Navigation bar elements -->
 			<ul>
   				<li><a href="vgr.html">Home</a></li>
   				<li><a href="page2.html">News</a></li>
-  				<li><a href="contact.html">Contact</a></li>
- 				<li><a href="about.html">About</a></li>
+  				<li><a href="page3.html">Contact</a></li>
+ 				<li><a href="page4.html">About</a></li>
 			</ul>
 			<!-- Wikipedia API generate info -->
 			<div id="information"> 
