--- a/vgr/templates/vgr.html
+++ b/vgr/templates/vgr.html
@@ -27,8 +27,8 @@
 			<ul>
   				<li><a href="vgr.html">Home</a></li>
   				<li><a href="page2.html">News</a></li>
-  				<li><a href="contact.html">Contact</a></li>
- 				<li><a href="about.html">About</a></li>
+  				<li><a href="page3.html">Contact</a></li>
+ 				<li><a href="page4.html">About</a></li>
 			</ul>
 			<!-- Wikipedia API generate info -->
 			<div id="information"> 
