--- a/vgr/templates/page2.html
+++ b/vgr/templates/page2.html
@@ -6,8 +6,8 @@
 	<!-- Sets title for html page -->
 	<title>GameRec</title>
 	<!-- Linkes css and javascript -->
-	<link rel="stylesheet" type="text/css" href="vgr.css">
-	<script src="vgr.js"></script>
+	<link rel="stylesheet" type="text/css" href="/static/css/vgr.css">
+	<script src="/static/js/vgr.js"></script>
 </head>
 
 <body>
@@ -17,10 +17,10 @@
 		<form method="get">
 			<!-- Navigation bar elements -->
 			<ul>
-  				<li><a href="vgr.html">Home</a></li>
-  				<li><a href="page2.html">News</a></li>
-  				<li><a href="page3.html">Contact</a></li>
- 				<li><a href="page4.html">About</a></li>
+  				<li><a href="/">Home</a></li>
+  				<li><a href="page2">News</a></li>
+  				<li><a href="page3">Contact</a></li>
+ 				<li><a href="page4">About</a></li>
 			</ul>
 			<!-- Wikipedia API generate info -->
 			<div id="information"> 
