FINALLY GOT RESULT PAGE WORKING

--- a/vgr/templates/vgr.html
+++ b/vgr/templates/vgr.html
@@ -15,7 +15,7 @@
 	<!-- Sets the gaming background for the entire html page-->
 	<div class="backgroundImage">
 		<!-- Allows user input to search -->
-		<form method="get">
+		<form method="get" action="/results">
 			<!-- Creates the GameRec title image -->
 			<img id = "gamerec" src="../static/images/GameRec.png" alt="gameRec" height="130" width="150">
 			<!-- Creates border around search box -->
