--- a/vgr/templates/page3.html
+++ b/vgr/templates/page3.html
@@ -10,7 +10,7 @@
 	<script src="/static/js/vgr.js"></script>
 </head>
 
-<body>
+<body class=page3>
 	<!-- Sets the gaming background for the entire html page-->
 	<div class="backgroundImage">
 		<!-- Allows user input to search -->
@@ -19,7 +19,7 @@
 			<ul>
   				<li><a href="/">Home</a></li>
   				<li><a href="page2">News</a></li>
-  				<li><a href="page3">Contact</a></li>
+  				<li class="page3"><a href="page3">Contact</a></li>
  				<li><a href="page4">About</a></li>
 			</ul>
 			<!-- Wikipedia API generate info -->
