--- a/vgr/templates/page4.html
+++ b/vgr/templates/page4.html
@@ -10,7 +10,7 @@
 	<script src="/static/js/vgr.js"></script>
 </head>
 
-<body>
+<body class="page4">
 	<!-- Sets the gaming background for the entire html page-->
 	<div class="backgroundImage">
 		<!-- Allows user input to search -->
@@ -20,7 +20,7 @@
   				<li><a href="/">Home</a></li>
   				<li><a href="page2">News</a></li>
   				<li><a href="page3">Contact</a></li>
- 				<li><a href="page4">About</a></li>
+ 				<li class="page4"><a href="page4">About</a></li>
 			</ul>
 			<!-- Wikipedia API generate info -->
 			<div id="information"> 
