--- a/vgr/templates/page2.html
+++ b/vgr/templates/page2.html
@@ -10,7 +10,7 @@
 	<script src="/static/js/vgr.js"></script>
 </head>
 
-<body>
+<body class=page2>
 	<!-- Sets the gaming background for the entire html page-->
 	<div class="backgroundImage">
 		<!-- Allows user input to search -->
@@ -18,7 +18,7 @@
 			<!-- Navigation bar elements -->
 			<ul>
   				<li><a href="/">Home</a></li>
-  				<li><a href="page2">News</a></li>
+  				<li class="page2"><a href="page2">News</a></li>
   				<li><a href="page3">Contact</a></li>
  				<li><a href="page4">About</a></li>
 			</ul>
