--- a/vgr/templates/vgr.html
+++ b/vgr/templates/vgr.html
@@ -11,7 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
-<body>
+<body class='home'>
 	<!-- Sets the gaming background for the entire html page-->
 	<div class="backgroundImage">
 		<!-- Allows user input to search -->
@@ -26,7 +26,7 @@
 				</div>
 			<!-- Navigation bar elements -->
 			<ul>
-  				<li><a href="/">Home</a></li>
+  				<li class='home'><a href="/">Home</a></li>
   				<li><a href="page2">News</a></li>
   				<li><a href="page3">Contact</a></li>
  				<li><a href="page4">About</a></li>
