Created a sign in link

--- a/vgr/templates/vgr.html
+++ b/vgr/templates/vgr.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+	<!-- Contains dictionary with user data -->
+	<div id= "signIn" {{user}} >
+	</div>
 	<!-- Sets the gaming background for the entire html page-->
 	<div class="backgroundImage">
 		<!-- Allows user input to search -->
