changed the favicon

--- a/vgr/static/css/vgr.css
+++ b/vgr/static/css/vgr.css
@@ -55,6 +55,7 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family: 'Courier New';
 }
 
 /* Change the link color to red on hover */
