Linked the new Api with the key

--- a/vgr/templates/vgr.html
+++ b/vgr/templates/vgr.html
@@ -1,3 +1,8 @@
+<!-- GET https://igdbcom-internet-game-database-v1.p.mashape.com/games/
+https://igdbcom-internet-game-database-v1.p.mashape.com/games/?fields=name&limit=10&offset=0&order=release_dates.date%3Adesc&search=zelda",
+X-Mashape-Key: "5XH95HRAqnmshOFldbKVy1WQBBRZp1qTQT6jsnexDxNpTGGbnc"
+Accept": "application/json
+ -->
 <!doctype html>
 
 <html>
