--- a/vgr/templates/results.html
+++ b/vgr/templates/results.html
@@ -12,22 +12,35 @@
 </head>
 
 <body>
+	
+
 	<!-- Sets the gaming background for the entire html page-->
-	<div class="backgroundImage">
-		<!-- Allows user input to search -->
-		<form method="get">
-			<!-- Navigation bar elements -->
-			<ul>
-  				<li><a href="/">Home</a></li>
-  				<li><a href="page2">News</a></li>
-  				<li><a href="page3">Contact</a></li>
- 				<li><a href="page4">About</a></li>
-			</ul>
-			<!-- Wikipedia API generate info -->
-			<div id="information"> 
-			</div>
-		</form>
-	</div>
+	<!-- <div class="backgroundImage"> -->
+	<!-- Allows user input to search -->
+	<form method="get">
+		<!-- Navigation bar elements -->
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="page2">News</a></li>
+			<li><a href="page3">Contact</a></li>
+			<li><a href="page4">About</a></li>
+		</ul>
+		<!-- Wikipedia API generate info -->
+		<div id="information"> 
+		</div>
+	</form>
+	<h2 class="content">
+		
+	
+	<ol>
+		{% for name in style_key %}
+		<li>
+			<br> {{name['name']}} 
+		{% endfor %}
+		</li>
+	</ol>
+	</h2>
+	<!-- </div> -->
 </body>
 
 </html>
