--- a/vgr/static/css/vgr.css
+++ b/vgr/static/css/vgr.css
@@ -35,7 +35,7 @@
  	color: white;
  }
 
-ul {
+ul.main{
     list-style-type: none;
     margin: 0;
     margin-right: 50;
@@ -45,11 +45,11 @@ ul {
     background-size: 50%
 }
 
-li {
+li.main {
     float: left;
 }
 
-li a {
+a.main {
     display: block;
     color: white;
     text-align: center;
@@ -59,29 +59,34 @@ li a {
 }
 
 /* Change the link color to red on hover */
-li a:hover {
+a.main:hover,a.main:active {
     background-color: red;
 }
+
+ul.home {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 6%;
+    background-color: blue;
+    left: 70%;
+}
+
+a.home {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+a.home:hover {
+    background-color: red;
+    color: black;
 }
 
 
-#sub-header ul li:hover a,
-body.home li.home a, {background-color: red}
-body.contact li.contact { background-color: red;
-}
 
-#sub-header ul li:hover a,
-body.home li.home a, { background-color: red 
-
-}
-body.page2 li.page2 a { color: #fff;
-						background-color: red 
-}
-body.page3 li.page3 a { color: #fff;
-						background-color: red 
-
-}
-body.page4 li.page4 a { color: #fff;
-						background-color: red 
+.current_page a { background-color: red 
 
 }
