--- a/vgr/templates/about.html
+++ b/vgr/templates/about.html
@@ -8,25 +8,31 @@
 	<!-- Linkes css and javascript -->
 	<link rel="stylesheet" type="text/css" href="/static/css/vgr.css">
 	<script src="/static/js/vgr.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
-<body class=page3>
+<body class="page4">
 	<!-- Sets the gaming background for the entire html page-->
 	<div class="backgroundImage">
 		<!-- Allows user input to search -->
 		<form method="get">
-			<!-- Navigation bar elements -->
-			<ul>
-  				<li><a href="/">Home</a></li>
-  				<li><a href="page2">News</a></li>
-  				<li class="page3"><a href="page3">Contact</a></li>
- 				<li><a href="page4">About</a></li>
+			<!-- Main Navigation bar elements -->
+		{% include 'navbar.html' %}
+		 <div id="SubBar">
+			<ul class='home'>
+  				<li id='aboutUs' class="home"><a class="home" href="">About Us</a></li>
+  				<li class="home"><a class="home" href="">FAQ</a></li>
 			</ul>
+		</div>
 			<!-- Wikipedia API generate info -->
 			<div id="information"> 
 			</div>
 		</form>
 	</div>
+	<script>
+		$('#about').addClass("current_page");
+		$('#aboutUs').addClass("current_page");
+	</script>
 </body>
 
 </html>
