--- a/vgr/templates/contact.html
+++ b/vgr/templates/contact.html
@@ -8,25 +8,24 @@
 	<!-- Linkes css and javascript -->
 	<link rel="stylesheet" type="text/css" href="/static/css/vgr.css">
 	<script src="/static/js/vgr.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
-<body class=page2>
+<body class=page3>
 	<!-- Sets the gaming background for the entire html page-->
 	<div class="backgroundImage">
 		<!-- Allows user input to search -->
 		<form method="get">
 			<!-- Navigation bar elements -->
-			<ul>
-  				<li><a href="/">Home</a></li>
-  				<li class="page2"><a href="page2">News</a></li>
-  				<li><a href="page3">Contact</a></li>
- 				<li><a href="page4">About</a></li>
-			</ul>
+			{% include 'navbar.html' %}
 			<!-- Wikipedia API generate info -->
 			<div id="information"> 
 			</div>
 		</form>
 	</div>
+	<script>
+		$('#contact').addClass("current_page");
+	</script>
 </body>
 
 </html>
