--- a/vgr/templates/results.html
+++ b/vgr/templates/results.html
@@ -17,18 +17,8 @@
 	<!-- Sets the gaming background for the entire html page-->
 	<!-- <div class="backgroundImage"> -->
 	<!-- Allows user input to search -->
-	<form method="get">
-		<!-- Navigation bar elements -->
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="page2">News</a></li>
-			<li><a href="page3">Contact</a></li>
-			<li><a href="page4">About</a></li>
-		</ul>
-		<!-- Wikipedia API generate info -->
-		<div id="information"> 
-		</div>
-	</form>
+	
+				{% include 'navbar.html' %}
 	<div class="content">
 		
 		<ol>
