--- a/vgr/static/css/vgr.css
+++ b/vgr/static/css/vgr.css
@@ -48,10 +48,29 @@ a {
 	border: 8px solid #009999;
  }
 
+ #searchResult {
+ 	position: absolute;
+	left: 25%;
+	top: 18%;
+	width: 50%;
+	text-align: center; 
+	font-size: 15px;
+	border: 4px solid #009999;
+ }
+
  #submit { 
 	position: absolute;
 	left: 77%;
 	top: 51%;
+	width: 10px%;
+	text-align: center; 
+	font-size: 18px;
+ }
+
+ #submitResult {
+ 	position: absolute;
+	left: 77%;
+	top: 18.5%;
 	width: 10px%;
 	text-align: center; 
 	font-size: 18px;
