--- a/vgr/templates/navbar.html
+++ b/vgr/templates/navbar.html
@@ -2,8 +2,8 @@
 	<ul class='main'>
 		<li id='home' class='main'><a class='main' href="/">Home</a></li>
 		<li id='news' class='main'><a class='main' href="news">News</a></li>
-		<li id='contact' class='main'><a class='main' href="contact">Contact</a></li>
-		<li id='about' class='main'><a class='main' href="about">About</a></li>
+		<li id='contact' class='main'><a class='main' href="about">About</a></li>
+		<li id='about' class='main'><a class='main' href="contact">Contact</a></li>
 		<li id='sign_in' class='main'><a class='main' href="{{link}}">{{greeting}}</a></li>
 	</ul>
 </div>
