got info.html working ... started to add other elements to page

--- a/vgr/templates/info.html
+++ b/vgr/templates/info.html
@@ -20,26 +20,8 @@
 		<div class="transbox">
 			{% include 'navbar.html' %}
 			<div class="content">
-				<ol>
-					{% for i in style_key %}
-					<ul>
-						{{i['id']}} 
-						{{i['name']}} 
-						{{i['storyline']}} 
-						{{i['genres']}} 
-					</ul>
-					{% endfor %} 
-					
-					<!-- {% for i in style_key %}
-					<li>
-						{{i['name']}} 
-						{{i['games'][0: 10]}} 
-
-						
-					</li>
-					{% endfor %} -->
-
-				</ol>
+					{{id}}
+					{{storyline}}
 			</div>
 		</div>
 	</div>
