--- a/vgr/templates/about.html
+++ b/vgr/templates/about.html
@@ -19,15 +19,15 @@
 	<!-- Sets the gaming background for the entire html page-->
 	<div class="backgroundImage">
 			{% include 'navbar.html' %}
-	</div>
-	 <p class="HayleyProfile center transbox"><strong>Christianson, Hayley</strong><br>
+	</div> 
+	 <p class="HayleyProfile center background transbox "><strong>Christianson, Hayley</strong><br>
 	 "My name is Hayley Christianson, and I will be attending UIC for computer science. A fun fact about me: I have a blood disorder called beta thalassemia which stops iron from entering my bloodstream via the beta globin. I am very sleepy a lot and can get sick a lot worse than most people. This is what drove me to stay indoors more often and then I discovered Computer science would be a great career for me!"
 ﻿     </p>
-	  <p class="KleverProfile center transbox"><strong>Gopar, Klever</strong><br>
+	  <p class="KleverProfile center background transbox "><strong>Gopar, Klever</strong><br>
 	  "My name is Klever Gopar, and I will be attending The College of Wooster for computer
 	  science. Fun Fact: I really enjoy biking and watching movies, so during the summer I am usually cruising around downtown or in the movie theater catching the latest horror or superhero movies with friends."
 	  </p>
-	  	<p class="KevinProfile center transbox"><strong>Graff, Kevin</strong><br>
+	  	<p class="KevinProfile center background transbox "><strong>Graff, Kevin</strong><br>
 	  	"My name is Kevin Graff, and I will be attending the Illinois Institute of Technology for computer engineering. Fun Fact: I love going outside and spending time with my friends and family! Most importantly, I love traveling! On July 1st, I went to Tepehuanes in Mexico and then traveled to Mazatlan to spend time at a gorgeous beach with my friends"
 	  	</p>
 	<script>
