Got the Info api link to link the game info to the page

--- a/vgr/templates/info.html
+++ b/vgr/templates/info.html
@@ -21,7 +21,8 @@
 			{% include 'navbar.html' %}
 			<div class="content">
 					{{id}}
-					{{storyline}}
+					{{name}}
+					{{summary}}
 			</div>
 		</div>
 	</div>
