--- a/vgr/templates/results.html
+++ b/vgr/templates/results.html
@@ -27,8 +27,9 @@
 					{% for result in results %}
 					<li>
 						<div class="submitInfo">
-						<!--<a href="info?story={{result['storyline']}}"> </a>  -->
-						<a href="info?id={{result['id']}}"> {{result['name']}}</a> 
+						
+						<a href="info?id={{result['id']}}&name={{result['name']}}&summary={{result['summary']}}"> {{result['name']}}</a> 
+<!-- 						&summary={{result['summary']}} -->
 
 						</div>
 						{{result['genres']}} 
