Got the Genres to work in the log!! (just need to show it on the website) also cleaned up code in python with Steven for more organized information

--- a/vgr/templates/info.html
+++ b/vgr/templates/info.html
@@ -23,6 +23,15 @@
 					{{id}}
 					{{name}}
 					{{summary}}
+
+					{% for rec in rec_list %}
+					<li>
+					
+						{{rec[0]['name']}}
+
+					</li>
+					{% endfor %}
+
 			</div>
 		</div>
 	</div>
