--- a/vgr/templates/results.html
+++ b/vgr/templates/results.html
@@ -28,7 +28,7 @@
 					<li>
 						<div class="submitInfo">
 						
-						<a href="info?id={{result['id']}}&name={{result['name']}}&summary={{result['summary']}}"> {{result['name']}}</a> 
+						<a href="info?id={{result['id']}}"> {{result['name']}}</a> 
 <!-- 						&summary={{result['summary']}} -->
 
 						</div>
