fixed the contact page

--- a/vgr/templates/contact.html
+++ b/vgr/templates/contact.html
@@ -19,17 +19,17 @@
 
 	</div>
 	<p class="contactInfo center background transbox"> If you have any questions or comments, contact us:<br>
-	Hayley's email: <strong>sbcj kbadjkcvbawbcuoaw</strong>
+	Hayley's email: <strong>hayleychristianson@gmail.com</strong>
 	<br>
-	Klever's email: <strong>cdosuiacbwaduhcoasdhb</strong>
+	Klever's email: <strong>k.gopar12@gmail.com</strong>
 	<br>
-	Kevin's email: <strong>dascouaduovcbadwjbvcu</strong>
+	Kevin's email: <strong>kevinjgraff98@gmail.com</strong>
 	</p>
 	 <script>
 		$('#about').addClass("current_page");
         
         $(document).ready(function(){
-        $('.contactPic').animate({left: '60%', height:'75%',width:'40%'},3000);
+        $('.contactPic').animate({left: '57%', height:'75%',width:'40%'},3000);
 });
 	 </script>
 </body>
