--- a/vgr/templates/info.html
+++ b/vgr/templates/info.html
@@ -19,6 +19,7 @@
 	<div class="background">
 		<div class="transbox">
 			{% include 'navbar.html' %}
+
 			<div class="content">
 					{{id}}
 					{{name}}
@@ -31,9 +32,14 @@
 
 					</li>
 					{% endfor %}
-
+			{% for result in results %}
+			<div class="summaryColor">
+				<a href="info?id={{result['id']}}"></a>
+				{{result['summary']}}
 			</div>
+			{% endfor %} 
 		</div>
 	</div>
+</div>
 </body>
 </html>
