--- a/vgr/static/css/vgr.css
+++ b/vgr/static/css/vgr.css
@@ -33,7 +33,7 @@ a {
 .background {
   background: url(klematis.jpg) repeat;
   border: 2px solid black;
-  background-color: grey;
+  background-color: darkgrey;
   opacity: 0.9;
 }
 
@@ -138,7 +138,7 @@ a.main:hover,a.main:active {
 	text-align: center; 
 	font-size: 23px;
 	border: 5px solid #009999;
-	color:yellow;
+	color: white;
  }
 
  .KleverProfile{ 
@@ -149,7 +149,7 @@ a.main:hover,a.main:active {
 	text-align: center; 
 	font-size: 23px;
 	border: 5px solid #009999;
-	color: skyblue;
+	color: white;
  }
 
   .KevinProfile{ 
@@ -160,7 +160,7 @@ a.main:hover,a.main:active {
 	text-align: center; 
 	font-size: 23px;
 	border: 5px solid #009999;
-	color: pink ;
+	color: white ;
  }
 
  .kevin {
@@ -192,6 +192,6 @@ a.main:hover,a.main:active {
 	text-align: center; 
 	font-size: 50px;
 	border: 5px solid #009999;
-	color: skyblue;
+	color: white;
 
 }
