--- a/vgr/templates/info.html
+++ b/vgr/templates/info.html
@@ -22,6 +22,7 @@
 
 			<div class="content">
 					
+					<h2> Here are some recommendations based on  the same Genre </h2>
 
 					{% for rec in rec_info %}
 					<li>
