--- a/vgr/templates/info.html
+++ b/vgr/templates/info.html
@@ -19,27 +19,34 @@
 	<div class="background">
 		<div class="transbox">
 			{% include 'navbar.html' %}
+			<h3>{{game_info['name']}}</h3>
+			<div class="summaryColor">
+				{% if game_info['summary'] %}
+				{{game_info['summary']}}
+				{% else %}
+				No summary was available for this game.
+				{% endif %}
+			</div>
 
+			{% if video_id %}
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/{{video_id}}" frameborder="0" allowfullscreen></iframe>
+			{% endif %}
 			<div class="content">
-					
-					<h2> Here are some recommendations based on  the same Genre </h2>
 
-					{% for rec in rec_info %}
-					<li>
-						<ol class= summaryColor>
-						{{rec[0]['name']}}
-						</ol>
-					</li>
-					{% endfor %}
+				<h2> Here are some recommendations based on  the same Genre </h2>
 
-			{% for result in results %}
-				<div class="summaryColor">
-					<a href="info?id={{result['id']}}"></a>
-					{{result['summary']}}
-				</div>
-			{% endfor %} 
+				{% for rec in rec_info %}
+				<li>
+					<ol class= summaryColor>
+
+						<a href="info?id={{rec['id']}}">{{rec['name']}}</a>
+					</ol>
+				</li>
+				{% endfor %}
+
+
+			</div>
 		</div>
 	</div>
-</div>
 </body>
 </html>
