took out the sign in link

--- a/vgr/templates/navbar.html
+++ b/vgr/templates/navbar.html
@@ -4,6 +4,6 @@
 		<li id='news' class='main'><a class='main' href="news">News</a></li>
 		<li id='contact' class='main'><a class='main' href="about">About</a></li>
 		<li id='about' class='main'><a class='main' href="contact">Contact</a></li>
-		<li id='sign_in' class='main'><a class='main' href="{{link}}">{{greeting}}</a></li>
+		<!-- <li id='sign_in' class='main'><a class='main' href="{{link}}">{{greeting}}</a></li> -->
 	</ul>
 </div>
