Added news page elements and files associated with it

--- a/vgr/static/css/vgr.css
+++ b/vgr/static/css/vgr.css
@@ -9,9 +9,9 @@
  	background-color: lightblue 
  }
 
- body {
+ /*body {
  	background-image: url("https://cdn-images-1.medium.com/max/1190/1*bD9nGMBuGWBdawdmrMmzVA.png")
-}
+}*/
 
 a {
 	color: white;
