--- a/vgr/templates/news.html
+++ b/vgr/templates/news.html
@@ -1,26 +1,147 @@
-<!doctype html>
-
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<!-- Sets title for html page -->
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<title>GameRec</title>
-	<!-- Linkes css and javascript -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+	<meta name="description" content="Fullscreen Slit Slider with CSS3 and jQuery" />
+	<meta name="keywords" content="slit slider, plugin, css3, transitions, jquery, fullscreen, autoplay" />
+	<meta name="author" content="Codrops" />
 	<link rel="stylesheet" type="text/css" href="/static/css/vgr.css">
+	<link rel="shortcut icon" href="../favicon.ico"> 
+	<link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="/static/css/custom.css" />
 	<script src="/static/js/vgr.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script type="text/javascript" src="/static/js/modernizr.custom.79639.js"></script>
+	<noscript>
+		<link rel="stylesheet" type="text/css" href="/static/css/styleNoJS.css" />
+	</noscript>
 </head>
-
-<body class=page2>
-	<!-- Sets the gaming background for the entire html page-->
-	<div class="backgroundImage">
+<body>
+		<div class="backgroundImage">
 			<!-- Navigation bar elements -->
 			{% include 'navbar.html' %}
+		</div>
+
+	<div class="container demo-2">
+		
+		<!-- Codrops top bar -->
+
+		<header class="clearfix">
+			<h1> New and Upcoming Games <h1>
+			</nav>
+
+		</header>
+
+		<div id="slider" class="sl-slider-wrapper">
+
+			<div class="sl-slider">
+				
+				<div class="sl-slide" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
+					<div class="sl-slide-inner">
+						<div class="bg-img bg-img-1"></div>
+						<h2> Pokemon Go!</h2>
+					</div>
+				</div>
+
+				<div class="sl-slide" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
+					<div class="sl-slide-inner">
+						<div class="bg-img bg-img-2"></div>
+					</div>
+				</div>
+
+				<div class="sl-slide" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
+					<div class="sl-slide-inner">
+						<div class="bg-img bg-img-3"></div>
+					</div>
+				</div>
+
+				<div class="sl-slide" data-orientation="vertical" data-slice1-rotation="-5" data-slice2-rotation="25" data-slice1-scale="2" data-slice2-scale="1">
+					<div class="sl-slide-inner">
+						<div class="bg-img bg-img-4"></div>
+					</div>
+				</div>
+
+				<div class="sl-slide" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
+					<div class="sl-slide-inner">
+						<div class="bg-img bg-img-5"></div>
+					</div>
+				</div>
+			</div><!-- /sl-slider -->
+
+			<nav id="nav-dots" class="nav-dots">
+				<span class="nav-dot-current"></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</nav>
+
+		</div><!-- /slider-wrapper -->
+
+
 	</div>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script type="text/javascript" src="/static/js/jquery.ba-cond.min.js"></script>
+	<script type="text/javascript" src="/static/js/jquery.slitslider.js"></script>
+	<script type="text/javascript">	
+		$(function() {
+			
+			var Page = (function() {
+
+				var $nav = $( '#nav-dots > span' ),
+				slitslider = $( '#slider' ).slitslider( {
+					onBeforeChange : function( slide, pos ) {
+
+						$nav.removeClass( 'nav-dot-current' );
+						$nav.eq( pos ).addClass( 'nav-dot-current' );
+
+					}
+				} ),
+
+				init = function() {
+
+					initEvents();
+
+				},
+				initEvents = function() {
+
+					$nav.each( function( i ) {
+
+						$( this ).on( 'click', function( event ) {
+
+							var $dot = $( this );
+
+							if( !slitslider.isActive() ) {
+
+								$nav.removeClass( 'nav-dot-current' );
+								$dot.addClass( 'nav-dot-current' );
+
+							}
+
+							slitslider.jump( i + 1 );
+							return false;
+
+						} );
+
+					} );
+
+				};
+
+				return { init : init };
+
+			})();
+
+			Page.init();
+
+			
+		});
+	</script>
 	<script>
 		$('#news').addClass("current_page");
 	</script>
-	
 </body>
-
 </html>
