fixed the format of the info

--- a/vgr/templates/info.html
+++ b/vgr/templates/info.html
@@ -28,9 +28,9 @@
 					No summary was available for this game.
 					{% endif %}
 				</div>
-
+                <br>
 				{% if video_id %}
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/{{video_id}}" frameborder="0" allowfullscreen></iframe>
+				<iframe style="left:25%;position:relative;" width="560" height="315" src="https://www.youtube.com/embed/{{video_id}}" frameborder="0" allowfullscreen></iframe>
 				{% endif %}
 
 
